--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "test": "npm run unit && npm run e2e"
   },
   "dependencies": {
+    "bootstrap": "^4.1.0",
+    "bootstrap-vue": "^2.0.0-rc.7",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
   },
